# exoplanet-core

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  CMakeLists.txt  MANIFEST.in  README.md  notes.txt  noxfile.py  pyproject.toml  setup.py
.github/workflows/: cpp.yml  cuda.yml  tests.yml  wheels.yml
ci/: Dockerfile  Jenkinsfile
dev/bench/: data.js
src/: CMakeLists.txt
src/exoplanet_core/: CMakeLists.txt  __init__.py  core.py  driver.cpp  testing.py
src/exoplanet_core/jax/: CMakeLists.txt  __init__.py  cpu_driver.cpp  cuda_kernels.cc.cu  cuda_kernels.h  gpu_driver.cpp  kernel_helpers.h  ops.py  pybind11_kernel_helpers.h  xla_driver.cpp
src/exoplanet_core/lib/include/exoplanet/: constants.h  contact_points.h  ellip.h  exoplanet.h  gen_legendre.py  kepler.h  legendre.h  limbdark.h  quartic.h  s1.h
src/exoplanet_core/lib/include/exoplanet/starry/: limbdark.h  utils.h
src/exoplanet_core/numpy/: __init__.py  ops.py
src/exoplanet_core/pymc/: __init__.py  jax_support.py  ops.py
src/exoplanet_core/pymc3/: __init__.py  ops.py
src/exoplanet_core/pymc4/: __init__.py  jax_support.py  ops.py
src/exoplanet_core/theano/: compat.py  ops.py
tests/: CMakeLists.txt  benchmark.py  core_test.py  driver_test.py  jax_test.py  pymc3_test.py  pymc4_jax_test.py  pymc4_test.py  pymc_jax_test.py  pymc_test.py  test_starry.cpp
tests/include/starry/: ellip.h  limbdark.h  utils.h
tests/jax/: jax_ops_test.py  ops_test.py
tests/numpy/: numpy_ops_test.py  ops_test.py
tests/pymc/: jaxify_test.py  pymc_ops_test.py
tests/theano/: jaxify_test.py  ops_test.py  theano_ops_test.py
