[build-system]
requires = [
  "setuptools>=42",
  "wheel",
  "setuptools_scm[toml]>=3.4",
  "numpy>=1.13.0",
  "pybind11>=2.6",
  "cmake",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/exoplanet_core/exoplanet_core_version.py"

[tool.black]
line-length = 79

[tool.isort]
skip_glob = []
line_length = 79
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
