[project]
name = "exoplanet_core"
description = "The compiled backend for exoplanet"
authors = [{ name = "Dan Foreman-Mackey", email = "foreman.mackey@gmail.com" }]
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT License" }
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
]
dynamic = ["version"]
dependencies = ["numpy"]

[project.optional-dependencies]
pymc3 = ["pymc3>=3.9", "numpy<1.22"]
pymc = ["pymc>=5.0.0"]
jax = ["jax", "jaxlib"]
test = ["pytest"]
comparison = ["batman-package", "starry", "numpy<1.22", "xarray<2023.10.0"]
benchmark = [
  "pytest",
  "pytest-benchmark",
  "radvel",
  "kepler.py",
  "batman-package",
  "starry",
  "exoplanet==0.4.5",
]

[project.urls]
"Homepage" = "https://docs.exoplanet.codes"
"Source" = "https://github.com/exoplanet-dev/exoplanet-core"
"Bug Tracker" = "https://github.com/exoplanet-dev/exoplanet-core/issues"

[build-system]
requires = ["scikit-build-core", "numpy", "pybind11"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
sdist.exclude = []
sdist.include = ["src/exoplanet_core/exoplanet_core_version.py"]
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"

[tool.setuptools_scm]
write_to = "src/exoplanet_core/exoplanet_core_version.py"

[tool.cibuildwheel]
skip = "pp* *-win32 *-musllinux_* *-manylinux_i686"

[tool.black]
line-length = 79

[tool.isort]
skip_glob = []
line_length = 79
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
